[project]
name = "fluorescence-unmixing"
version = "0.1.0"
description = "Fluorescence unmixing for reversibly switchable fluorescent proteins with distinct decay kinetics"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Boyden Lab", email = ""},
]
license = {text = "MIT"}
keywords = ["fluorescence", "microscopy", "unmixing", "photoswitchable proteins", "live cell imaging"]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
    "tifffile>=2023.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ['py311']
